# test_nice748719a0-aaae-4278-b087-d94483a9c4bf

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: createContentRequest_service.py  createDraft_service.py  createEmailAnalysis_service.py  createTemplate_service.py  deleteDraft_service.py  deleteEmailAnalytics_service.py  deleteGeneratedContent_service.py  deleteTemplate_service.py  deleteValidation_service.py  fetchGeneratedContent_service.py  getAnalytics_service.py  getDraftById_service.py  getDrafts_service.py  getEmailPerformance_service.py  getModelFeedback_service.py  getTemplate_service.py  getValidationStatus_service.py  listModels_service.py  listTemplates_service.py  listValidations_service.py  selectModel_service.py  server.py  updateDraft_service.py  updateEmailAnalysis_service.py  updateTemplate_service.py  updateValidation_service.py  validateContent_service.py
