[tool.poetry]
name = "test-nice"
version = "0.1.0"
description = "a project that allows users to write B2B and B2C cold emails utilizing AI. In the program use LiteLLM so I can call multiple models like gpt-4-turbo and another model for checking output of gpt-4-turbo"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "*"
prisma = "*"
pydantic = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
